@startuml
'https://plantuml.com/class-diagram

class Persona{
-edad: double
-peso: double
-altura: double
-dieta: Dieta
}
class Dieta{
descripcion: String
}

Persona --> Persona: -resultadoDeseado
Persona -->"1..5" PlanDeEjercicios

class PlanDeEjercicios{
+iniciarRutina()
+pausarRutina()
+modificarRutina()
+cambiarHorario()
}

PlanDeEjercicios --> Rutina
PlanDeEjercicios --> Horario

class Rutina{
-series: int
-descanso: int
-repeticiones: int
+agregarEjercicio()
+Rutina()
+cambiarIntendidad()
}

enum Intensidad{
ALTA
MEDIA
BAJA
}

class Horario{
día: Día
horaInicio: String
horaFin: String
}

Rutina --> Intensidad
Rutina -->"*" Ejercicio

class Ejercicio{
-nombre: String
-grupoMuscular: String
-movimiento: String
+obtenerMovimientos()
}

@enduml